fix: align icon and text of sidebar

--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -4,8 +4,8 @@
     grid-template-columns: 1fr 5fr;
 }
 
-.side {     
-    width: 230px;  
+.side {
+    width: 230px;
     background: #212121;
     display: flex;
     flex-direction: column;
@@ -22,12 +22,12 @@
 .logo {
     width: 100%;
     max-width: 230px;
-    padding: 25px;   
+    padding: 25px;
 }
 
-.menu {    
+.menu {
     display: flex;
-    flex-direction: column;   
+    flex-direction: column;
     color: #fff;
 
     a {
@@ -40,10 +40,12 @@
             width: 100%;
             background: #a7a7a7;
         }
-    }    
+    }
 
     i {
         padding-right: 8px;
+        display: flex;
+        align-items: center;
     }
 }
 
@@ -51,8 +53,8 @@
     background: #a7a7a7;
 }
 
-.content {   
-    padding: 20px;   
+.content {
+    padding: 20px;
 }
 
 .loader {
